Ajustes: Executar liquibase apenas nos schemas retornados da consulta de tenants.
Implementações:
Inserir o primeiro grupo de acesso.
Inserir a primeira Role.
Gerenciamento de perfil.
Possibilitando cadastrar imagem de perfil.
Adicionado uma coluna a tabela de perfil para armazenar path da imagem.
Alteração de senha.
Alteração de alguns dados do usuario.